WPF with MVVM learnings

--- a/Registry/MainWindow.xaml
+++ b/Registry/MainWindow.xaml
@@ -1,8 +1,10 @@
-﻿<Window x:Class="Registry.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="clr-namespace:Registry" x:Class="Registry.MainWindow"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <Window.DataContext>
+        <local:MainWindowViewModel/>
+    </Window.DataContext>
+    <Grid/>
 </Window>
