--- a/Registry/View/MainWindow.xaml
+++ b/Registry/View/MainWindow.xaml
@@ -1,26 +1,28 @@
-﻿<Window
+﻿<ribbon:RibbonWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ribbon="http://schemas.microsoft.com/winfx/2006/xaml/presentation/ribbon"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        x:Class="Registry.MainWindow"
-        Title="MainWindow" Height="350" Width="525" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="1. Найдите пациента" Margin="3" VerticalAlignment="Center" />
-        <!--Watermark can stay untill user starts typing but it will be implemented in later version. See https://wpftoolkit.codeplex.com/workitem/21667-->
-        <xctk:WatermarkTextBox Grid.Row="0" Grid.Column="1" Margin="3" Watermark="Введите имя, фамилию, СНИЛС или номер полиса пациента" />
-        <TextBlock Grid.Row="1" Grid.Column="0" Margin="3" Text="2. Выберите его из списка"></TextBlock>
-        <ListBox Grid.Row="1" Grid.Column="1" Margin="3" />
-        <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="10" Content="...или нажмите сюда, чтобы создать нового пациента"></Button>
-        
-        
-    </Grid>
-</Window>
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:registry="clr-namespace:Registry"
+    mc:Ignorable="d"
+    x:Class="Registry.MainWindow"
+    Title="Регистратура" Height="350" Width="525" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+    d:DataContext="{d:DesignInstance registry:MainWindowViewModel}">
+    <ribbon:Ribbon>
+        <ribbon:Ribbon.ApplicationMenu>
+            <ribbon:RibbonApplicationMenu>
+                <ribbon:RibbonApplicationMenuItem ItemsSource="{Binding Patients}">
+                    <ribbon:RibbonApplicationMenuItem.Header>
+                        <StackPanel Orientation="Vertical">
+                            <TextBlock Text="Поиск пациента" Margin="2" />
+                            <xctk:WatermarkTextBox Width="200" Margin="2" Watermark="Введите данные пациента" Text="{Binding UserInput, Delay=500, UpdateSourceTrigger=PropertyChanged}" />
+                        </StackPanel>
+                    </ribbon:RibbonApplicationMenuItem.Header>
+                </ribbon:RibbonApplicationMenuItem>
+            </ribbon:RibbonApplicationMenu>
+        </ribbon:Ribbon.ApplicationMenu>
+    </ribbon:Ribbon>
+
+</ribbon:RibbonWindow>
