--- a/Registry/View/PatientSearchView.xaml
+++ b/Registry/View/PatientSearchView.xaml
@@ -1,27 +1,38 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:registry="clr-namespace:Registry">
+                    xmlns:registry="clr-namespace:Registry"
+                    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <DataTemplate DataType="{x:Type registry:PersonViewModel}">
         <DataTemplate.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+            <stuffLib:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
+                <stuffLib:ConverterItem To="{x:Static Visibility.Visible}">
+                    <stuffLib:ConverterItem.From>
+                        <system:Boolean>False</system:Boolean>
+                    </stuffLib:ConverterItem.From>
+                </stuffLib:ConverterItem>
+            </stuffLib:UniversalConverter>
         </DataTemplate.Resources>
-        <Grid HorizontalAlignment="Stretch">
+        <Grid HorizontalAlignment="Stretch" MinWidth="320" MinHeight="54" VerticalAlignment="Stretch">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="Transparent" Width="48" Height="48" BorderBrush="Black" BorderThickness="1">
-                <Image HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Source="{Binding PhotoSource}"></Image>
+            <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Background="Transparent" Width="48" Height="48" BorderBrush="Black" BorderThickness="1" VerticalAlignment="Center">
+                <Image HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Source="{Binding PhotoSource}" />
             </Border>
-            <DockPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" LastChildFill="False">
+            <DockPanel Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" LastChildFill="False" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}">
                 <TextBlock DockPanel.Dock="Left" VerticalAlignment="Center" FontSize="14" Text="{Binding FullName, Mode=OneTime}" Margin="5" />
-                <TextBlock DockPanel.Dock="Right" VerticalAlignment="Center" Text="{Binding BirthDate, StringFormat='{}{0:dd-MMM-yyyy}'}" Margin="5" />
+                <TextBlock DockPanel.Dock="Right" VerticalAlignment="Center" Text="{Binding BirthDate, StringFormat=dd-MM-yyyy}" Margin="5" />
             </DockPanel>
-            <TextBlock Grid.Row="1" Grid.Column="1"  Margin="5" Foreground="DimGray" Text="CНИЛС 123 456 789-01 Полис 1234567890123" />
+            <TextBlock Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Text="Пациент не выбран" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold"  FontSize="14"
+                       Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToVisibilityConverter}}" />
+            <TextBlock Grid.Row="1" Grid.Column="1"  Margin="5" Foreground="DimGray" Text="CНИЛС 123 456 789-01 Полис 1234567890123" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
