--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -4,7 +4,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="View/PatientSearchView.xaml" />
+                <ResourceDictionary Source="View/PersonView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
