--- a/Registry/View/MainWindow.xaml
+++ b/Registry/View/MainWindow.xaml
@@ -1,82 +1,14 @@
 ﻿<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:registry="clr-namespace:Registry"
-    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
-    xmlns:system="clr-namespace:System;assembly=mscorlib"
-    mc:Ignorable="d"
-    x:Class="Registry.MainWindow"
-    Title="Регистратура" Height="350" Width="525" WindowStartupLocation="CenterScreen" WindowState="Maximized"
-    d:DataContext="{d:DesignInstance registry:MainWindowViewModel}">
-    <Window.Resources>
-        <stuffLib:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
-            <stuffLib:ConverterItem To="{x:Static Visibility.Visible}">
-                <stuffLib:ConverterItem.From>
-                    <system:Boolean>False</system:Boolean>
-                </stuffLib:ConverterItem.From>
-            </stuffLib:ConverterItem>
-        </stuffLib:UniversalConverter>
-        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <stuffLib:MultiBooleanConverter x:Key="MultiBooleanToInversedVisibilityConverter" UseLogicalOr="True" TrueValue="{x:Static Visibility.Collapsed}" FalseValue="{x:Static Visibility.Visible}" />
-    </Window.Resources>
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:registry="clr-namespace:Registry"
+        mc:Ignorable="d"
+        x:Class="Registry.MainWindow"
+        Title="Регистратура" Height="350" Width="525" WindowStartupLocation="CenterScreen" WindowState="Maximized"
+        d:DataContext="{d:DesignInstance registry:MainWindowViewModel}">
     <DockPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <Border DockPanel.Dock="Top" BorderBrush="DimGray" BorderThickness="0 0 0 1">
-            <Border.Background>
-                <LinearGradientBrush StartPoint="0 0" EndPoint="0 1">
-                    <GradientStop Offset="0" Color="LightGray" />
-                    <GradientStop Offset="1" Color="White" />
-                </LinearGradientBrush>
-            </Border.Background>
-            <Grid VerticalAlignment="Top">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" ToolTip="Новый Пациент" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding NewPatientCommand}">
-                    <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/AddPatient48x48.png" />
-                </Button>
-                <Button Grid.Column="1" Margin="2" VerticalAlignment="Center" Padding="3" Content="{Binding CurrentPatient}" Command="{Binding EditPatientCommand}"
-                        Background="White">
-                    <Button.ToolTip>
-                        <ToolTip>
-                            <StackPanel Orientation="Vertical">
-                                <TextBlock Text="Информация о пациенте" Margin="5" FontWeight="Bold" />
-                                <TextBlock Text="Здесь можно будет увидеть дополнительную информацию о пациенте" Margin="5" />
-                            </StackPanel>
-                        </ToolTip>
-                    </Button.ToolTip>
-                </Button>
-                <xctk:WatermarkTextBox Grid.Column="2" Margin="5" Watermark="Поиск по имени, фамилии, отчеству, дате рождения или номерам СНИЛС и ЕМН"
-                                       VerticalAlignment="Center" x:Name="searchPatientTextBox" Text="{Binding UserInput, UpdateSourceTrigger=PropertyChanged}"
-                                       PreviewKeyDown="SearchPatientTextBoxOnKeyDown" Width="500" HorizontalAlignment="Left"/>
-                <Popup Grid.Column="1" PlacementTarget="{x:Reference searchPatientTextBox}" Placement="Bottom" VerticalOffset="5" IsOpen="{Binding IsFocused, ElementName=searchPatientTextBox, Mode=OneWay}"
-                       MinHeight="100" Width="{Binding ActualWidth, ElementName=searchPatientTextBox}" x:Name="popup">
-                    <Border Background="White" BorderBrush="DimGray" BorderThickness="1">
-                        <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <ListBox BorderThickness="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                                 ItemsSource="{Binding Patients}" SelectedItem="{Binding SelectedPatient, Mode=OneWayToSource}" x:Name="patientList">
-                                <ListBox.Visibility>
-                                    <MultiBinding Converter="{StaticResource MultiBooleanToInversedVisibilityConverter}">
-                                        <Binding Path="IsLookingForPatient" />
-                                        <Binding Path="NoOneisFound" />
-                                    </MultiBinding>
-                                </ListBox.Visibility>
-                                <ListBox.Resources>
-                                    <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="White" />
-                                </ListBox.Resources>
-                            </ListBox>
-                            <TextBlock Text="Идет поиск пациентов..." HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 20 0 20" 
-                                   Visibility="{Binding IsLookingForPatient, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                            <TextBlock Text="Не найдено ни одного пациента. Попробуйте изменить критерии поиска" TextWrapping="WrapWithOverflow" HorizontalAlignment="Center"
-                                   VerticalAlignment="Center" Margin="0 20 0 20" Visibility="{Binding NoOneisFound, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                        </Grid>
-                    </Border>
-                </Popup>
-            </Grid>
-        </Border>
+        <registry:PatientSearchUserControl DataContext="{Binding PatientSearchViewModel}" DockPanel.Dock="Top" />
         <Border Background="LightGray">
             <TextBlock Text="Schedule placeholder" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" />
         </Border>
