--- a/Registry/View/EditPersonDataView.xaml
+++ b/Registry/View/EditPersonDataView.xaml
@@ -40,6 +40,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Личные данные пациента</Label>
@@ -51,46 +52,51 @@
             </StackPanel>
         </Border>
         <TextBlock Grid.Row="1" Grid.Column="1" VerticalAlignment="Center">Фамилия</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding LastName, Mode=OneWay}" />
+        <TextBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding LastName}" />
 
         <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center">Имя</TextBlock>
-        <TextBox Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding FirstName, Mode=OneWay}"/>
+        <TextBox Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding FirstName}"/>
 
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center">Отчество</TextBlock>
-        <TextBox Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding MiddleName, Mode=OneWay}"/>
+        <TextBox Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding MiddleName}"/>
 
         <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">Дата рождения</TextBlock>
-        <DatePicker Grid.Row="4" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding BirthDate, Mode=OneWay, StringFormat=dd.MM.yyyy}" BorderThickness="1"/>
+        <DatePicker Grid.Row="4" Grid.Column="2" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding BirthDate, StringFormat=dd.MM.yyyy}" BorderThickness="1"/>
         <TextBlock Grid.Row="4" Grid.Column="3" VerticalAlignment="Center">Пол</TextBlock>
-        <Button Grid.Row="4" Grid.Column="4" Width="30" Margin="2,0,0,0" Background="Transparent" Content="{Binding Gender, Mode=OneWay}"/>
+        <Button Grid.Row="4" Grid.Column="4" Width="30" Margin="2,0,0,0" Background="Transparent" Content="{Binding Gender}"/>
 
         <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center">Телефоны</TextBlock>
-        <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding Phones, Mode=OneWay}"/>
+        <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="3" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding Phones}"/>
 
         <TextBlock Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">СНИЛС</TextBlock>
-        <TextBox Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding SNILS, Mode=OneWay}"/>
-        
+        <TextBox Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding SNILS}"/>
+
         <TextBlock Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">ЕНП</TextBlock>
-        <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding MedNumber, Mode=OneWay}"/>
+        <TextBox Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="4" Margin="1" HorizontalAlignment="Stretch" Height="24" Text="{Binding MedNumber}"/>
 
 
         <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Страховые документы</Label>
-        <TextBox Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Insurance, Mode=OneWay}"/>
+        <TextBox Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Insurance}"/>
 
         <Label Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Адрес</Label>
-        <TextBox Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Addresses, Mode=OneWay}"/>
+        <TextBox Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Addresses}"/>
 
         <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Удостоверение личности</Label>
-        <TextBox Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding IdentityDocuments, Mode=OneWay}"/>
+        <TextBox Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding IdentityDocument}"/>
 
         <Label Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Инвалидость</Label>
         <TextBox Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72"/>
-        
+
         <Label Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Социальный статус</Label>
         <TextBox Grid.Row="17" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72"/>
-        
+
         <Label Grid.Row="18" Grid.Column="0" Grid.ColumnSpan="5"  FontWeight="Bold">Родственники/Представитель</Label>
-        <TextBox Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Relatives, Mode=OneWay}"/>
+        <TextBox Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="5" Margin="1" HorizontalAlignment="Stretch" Height="72" Text="{Binding Relatives}"/>
+
+        <StackPanel  Grid.Row="20" Grid.Column="0" Grid.ColumnSpan="5" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Background="Transparent"  Margin="3"  Height="24" Padding="3" Content="Сохранить" Command="{Binding SaveChanges}"/>
+            <Button Background="Transparent"  Margin="3"  Height="24" Padding="3" Content="Отмена" />
+        </StackPanel>
 
     </Grid>
 </Window>
