--- a/Registry/View/PatientSearchUserControl.xaml
+++ b/Registry/View/PatientSearchUserControl.xaml
@@ -29,17 +29,20 @@
             <Button Grid.Column="0" ToolTip="Новый Пациент" Padding="5" Margin="5" VerticalAlignment="Center" Background="White" Command="{Binding NewPatientCommand}">
                 <Image Width="48" Height="48" Source="pack://application:,,,/Resources;component/Images/AddPatient48x48.png" />
             </Button>
-            <Button Grid.Column="1" Margin="2" VerticalAlignment="Center" Padding="3" Content="{Binding CurrentPatient}" Command="{Binding EditPatientCommand}"
+            <xctk:SplitButton Grid.Column="1" Margin="2" VerticalAlignment="Center" Padding="3" Content="{Binding CurrentPatient}" Command="{Binding EditPatientCommand}"
                         Background="White">
-                <Button.ToolTip>
+                <xctk:SplitButton.ToolTip>
                     <ToolTip>
                         <StackPanel Orientation="Vertical">
                             <TextBlock Text="Информация о пациенте" Margin="5" FontWeight="Bold" />
                             <TextBlock Text="Здесь можно будет увидеть дополнительную информацию о пациенте" Margin="5" />
                         </StackPanel>
                     </ToolTip>
-                </Button.ToolTip>
-            </Button>
+                </xctk:SplitButton.ToolTip>
+                <xctk:SplitButton.DropDownContent>
+                    <TextBlock Margin="5" Text="Assignment list placeholder" />
+                </xctk:SplitButton.DropDownContent>
+            </xctk:SplitButton>
             <TextBlock Grid.Column="2" Margin="7 0 0 0"  x:Name="watermark" Text="Поиск по имени, фамилии, отчеству, дате рождения или номерам СНИЛС и ЕМН" VerticalAlignment="Center">
                 <TextBlock.RenderTransform>
                     <TranslateTransform Y="0" />
