--- a/Registry/App.xaml
+++ b/Registry/App.xaml
@@ -6,6 +6,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="View/PersonView.xaml" />
                 <ResourceDictionary Source="View/PatientAssignmentListView.xaml" />
+                <ResourceDictionary Source="View/InsuranceDocumentView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
