--- a/Registry/View/InsuranceDocumentView.xaml
+++ b/Registry/View/InsuranceDocumentView.xaml
@@ -5,7 +5,6 @@
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <DataTemplate DataType="{x:Type registry:InsuranceDocumentViewModel}">
         <DataTemplate.Resources>
-            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <stuffLib:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
                 <stuffLib:ConverterItem To="{x:Static Visibility.Visible}">
                     <stuffLib:ConverterItem.From>
@@ -34,7 +33,9 @@
 
             <TextBlock Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Text="Страховая компания" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
 
-            <TextBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding InsuranceCompany}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+            <ComboBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="3" ItemsSource="{Binding InsuranceCompanies, Mode=OneWayToSource}" SelectedValue="{Binding InsuranceCompanyId}" 
+                      Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
+
 
             <TextBlock Grid.Row="3" Grid.Column="0" Text="Серия" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
             <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Series}" Visibility="{Binding IsEmpty, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
